Fixed z-index issue with create account button and navigation links.

--- a/app/static/styles.scss
+++ b/app/static/styles.scss
@@ -24,6 +24,7 @@
     position: fixed;
     width: 100%;
     background-color: white;
+    z-index: 1;
 
     .hamburger-button {
         display: flex;
